--- a/style.css
+++ b/style.css
@@ -31,3 +31,8 @@ h1 {
   display: flex;
   justify-content: space-between;
 }
+.image {
+  text-align: center;
+  color: white;
+  margin-top: 6px;
+}
